# Priyanka_TenderV03

./: bidder_database.json  debug_excel.py  quick_test.py  test_app.py  test_bidder_manager.py  test_comparative.py  test_direct.py  test_doc_generator.py  test_excel_parser.py  test_latex_pdf.py  test_letter.py  test_pdf_gen.py  test_report_generator.py  test_scrutiny.py  test_tender_processor.py  test_work_order.py  x.py
Bill_Transformation/: .replit  BATCH_PROCESSING_README.md  README.md  STANDING_INSTRUCTIONS.md  app.py  batch_processor.py  document_generator_v04.py  excel_processor_v01.py  pyproject.toml  replit.md  requirements.txt  run_batch_processing.bat  run_e2e_tests.bat  test_end_to_end.py  test_template_rendering.py  verify_output.bat  verify_output.py  windsurf-01.rar
Bill_Transformation/batch_bills_v04_20250814_221156/: First & Final Bill_bill_template.docx  First & Final Bill_bill_template.html  First & Final Bill_certificate_ii.docx  First & Final Bill_certificate_ii.html  First & Final Bill_certificate_iii.docx  First & Final Bill_combined_bill_document_v04.docx  First & Final Bill_deviation_statement.docx  First & Final Bill_extra_items.docx  First & Final Bill_first_page.docx  First & Final Bill_last_page.docx  First & Final Bill_note_sheet.docx
Bill_Transformation/batch_processing_output/: bill_004_20250815_020939.html
Bill_Transformation/custom_utils/: utils.py
Bill_Transformation/templates/: bill_template.html  certificate_ii.html  certificate_iii.html  first_page.html  note_sheet.html
Bill_Transformation/test_files/: new_t01plusFirst_FINAL.xlsx  (+1 more)
bill_cursor_170825/: README.md  app.py  pyproject.toml  replit.md  requirements.txt  zzz_run_app.bat
(+72 files in other folders)
