[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf>=6.0.0",
    "reportlab>=4.4.3",
    "streamlit>=1.48.1",
    "weasyprint>=66.0",
]
